update markup with basic login

--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 </head>
 	<body>
 		<div class="container">
+			<div id="app-interface">
+				<label for="userName">User:</label>
+				<input type="text" id="userName" />
+				<label for="userColor">Color:</label>
+				<select id="userColor">
+					<option value="red">red</option>
+					<option value="blue">blue</option>
+					<option value="green">green</option>
+					<option value="yellow">yellow</option>
+				</select>
+				<button id="joinGame">Join</button>
+			</div>
 			<h1>Star Base</h1>
 			<div id="game"></div>
 		</div>
